Modify request matcher for un-auth endpoints